--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nathan Cantafio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="container">
+
+        <header class="header">
+            <!-- Left Column: Contains Title and Links -->
+            <div class="header-content">
+                <a href="index.html" class="home-link"><h1>Nathan Cantafio</h1></a>
+                <nav class="links">
+                    <a href="mailto:nathan.cantafio@stat.ubc.ca">nathan.cantafio@stat.ubc.ca</a>
+                    <a href="https://github.com/cantafionathan" target="_blank">GitHub</a>
+                    <a href="cv.html">CV</a>
+                </nav>
+            </div>
+
+            <!-- Right Column: Contains the Image -->
+            <div class="header-image-container">
+                <img src="profile.jpeg" alt="A photo of Nathan Cantafio" class="header-profile-image">
+            </div>
+        </header>
+
+
+        <main class="content">
+            <p>
+                I am a first year Statistics M.Sc. student at UBC. My interests include Bayesian Optimization and Gaussian Processes.
+            </p>
+        </main>
+
+    </div>
+
+</body>
+</html>
+
