--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,7 @@
                 <p>University of British Columbia, Sep 2025 – Dec 2025</p>
             </div>
              <div class="cv-entry">
-                 <h4>Undergraduate Research Assistantship</h4>
+                 <h4>Undergraduate Summer Research Assistantship</h4>
                  <p>University of British Columbia under Prof.  Geoff Pleiss, May 2025 – Aug 2025</p>
              </div>
              <div class="cv-entry">
@@ -66,6 +66,15 @@
             <div class="cv-entry">
                 <h4>Pandemic Simulation Experiment</h4>
                 <p> STAT 404 Course Project, Dec 2024 </br>  Github repo: <a href="https://github.com/cantafionathan/pandemic-simulation">here</a> </p>
+            </div>
+        </section>
+
+       <!-- Awards Section -->
+        <section class="cv-section">
+            <h2>Awards</h2>
+            <div class="cv-entry">
+                <h4>Constance Van Eeden Scholar Award</h4>
+                <p> Sep 2025 </p>
             </div>
         </section>
 
