--- a/cv.html
+++ b/cv.html
@@ -64,6 +64,10 @@
         <section class="cv-section">
             <h2>Projects</h2>
             <div class="cv-entry">
+                <h4>Pokémon Team Building</h4>
+                <p> STAT 535C Course Project, Dec 2025 </br>  Github repo: <a href="https://github.com/cantafionathan/pokemon">here</a> </p>
+            </div>
+            <div class="cv-entry">
                 <h4>Pandemic Simulation Experiment</h4>
                 <p> STAT 404 Course Project, Dec 2024 </br>  Github repo: <a href="https://github.com/cantafionathan/pandemic-simulation">here</a> </p>
             </div>
