--- a/cv.html
+++ b/cv.html
@@ -80,6 +80,10 @@
                 <h4>Constance Van Eeden Scholar Award</h4>
                 <p> Sep 2025 </p>
             </div>
+            <div class="cv-entry">
+                <h4>NSERC USRA</h4>
+                <p> May 2025 </p>
+            </div>
         </section>
 
     </div>
