--- a/cv.html
+++ b/cv.html
@@ -10,22 +10,8 @@
 
     <div class="container">
 
-        <header class="header">
-            <!-- Left Column: Contains Title and Links -->
-            <div class="header-content">
-                <a href="index.html" class="home-link"><h1>Nathan Cantafio</h1></a>
-                <nav class="links">
-                    <a href="mailto:nathan.cantafio@stat.ubc.ca">nathan.cantafio@stat.ubc.ca</a>
-                    <a href="https://github.com/cantafionathan" target="_blank">GitHub</a>
-                    <a href="cv.html">CV</a>
-                </nav>
-            </div>
-
-            <!-- Right Column: Contains the Image -->
-            <div class="header-image-container">
-                <img src="profile.jpeg" alt="A photo of Nathan Cantafio" class="header-profile-image">
-            </div>
-        </header>
+        <!-- Header loads here -->
+        <div id="header"></div>
 
         <h2 class="page-title">Curriculum Vitae</h2>
 
@@ -34,59 +20,61 @@
             <h2>Education</h2>
             <div class="cv-entry">
                 <h4>M.Sc. Statistics</h4>
-                <p>University of British Columbia, 2025 - Ongoing
-                </p>
-            </div>	
+                <p>University of British Columbia, 2025 - Ongoing</p>
+            </div>
             <div class="cv-entry">
                 <h4>B.Sc. Combined Honours, Mathematics and Statistics</h4>
                 <p>University of British Columbia, 2020 - 2025</p>
-            </div>	
+            </div>
         </section>
 
-        <!-- Work Section -->
+        <!-- Work Experience -->
         <section class="cv-section">
             <h2>Work Experience</h2>
             <div class="cv-entry">
                 <h4>Teaching Assistant, STAT 305</h4>
                 <p>University of British Columbia, Sep 2025 – Dec 2025</p>
             </div>
-             <div class="cv-entry">
-                 <h4>Undergraduate Summer Research Assistantship</h4>
-                 <p>University of British Columbia under Prof.  Geoff Pleiss, May 2025 – Aug 2025</p>
-             </div>
-             <div class="cv-entry">
-                 <h4>External Support Specialist co-op</h4>
-                 <p>Chartered Professional Accountants of British Columbia, Sep 2023 – Aug 2024</p>
-             </div>
+            <div class="cv-entry">
+                <h4>Undergraduate Summer Research Assistantship</h4>
+                <p>UBC under Prof. Geoff Pleiss, May 2025 – Aug 2025</p>
+            </div>
+            <div class="cv-entry">
+                <h4>External Support Specialist Co-op</h4>
+                <p>CPA of British Columbia, Sep 2023 – Aug 2024</p>
+            </div>
         </section>
 
-        <!-- Projects Section -->
+        <!-- Projects -->
         <section class="cv-section">
             <h2>Projects</h2>
             <div class="cv-entry">
                 <h4>Pokémon Team Building</h4>
-                <p> STAT 535C Course Project, Dec 2025 </br>  Github repo: <a href="https://github.com/cantafionathan/pokemon">here</a> </p>
+                <p>STAT 535C Course Project, Dec 2025 <br>
+                   GitHub repo: <a href="https://github.com/cantafionathan/pokemon">here</a></p>
             </div>
             <div class="cv-entry">
                 <h4>Pandemic Simulation Experiment</h4>
-                <p> STAT 404 Course Project, Dec 2024 </br>  Github repo: <a href="https://github.com/cantafionathan/pandemic-simulation">here</a> </p>
+                <p>STAT 404 Course Project, Dec 2024 <br>
+                   GitHub repo: <a href="https://github.com/cantafionathan/pandemic-simulation">here</a></p>
             </div>
         </section>
 
-       <!-- Awards Section -->
+        <!-- Awards -->
         <section class="cv-section">
             <h2>Awards</h2>
             <div class="cv-entry">
                 <h4>Constance Van Eeden Scholar Award</h4>
-                <p> Sep 2025 </p>
+                <p>Sep 2025</p>
             </div>
             <div class="cv-entry">
                 <h4>NSERC USRA</h4>
-                <p> May 2025 </p>
+                <p>May 2025</p>
             </div>
         </section>
 
     </div>
 
+    <script src="load-header.js"></script>
 </body>
 </html>
