--- a/index.html
+++ b/index.html
@@ -10,23 +10,8 @@
 
     <div class="container">
 
-        <header class="header">
-            <!-- Left Column: Contains Title and Links -->
-            <div class="header-content">
-                <a href="index.html" class="home-link"><h1>Nathan Cantafio</h1></a>
-                <nav class="links">
-                    <a href="mailto:nathan.cantafio@stat.ubc.ca">nathan.cantafio@stat.ubc.ca</a>
-                    <a href="https://github.com/cantafionathan" target="_blank">GitHub</a>
-                    <a href="cv.html">CV</a>
-                </nav>
-            </div>
-
-            <!-- Right Column: Contains the Image -->
-            <div class="header-image-container">
-                <img src="profile.jpeg" alt="A photo of Nathan Cantafio" class="header-profile-image">
-            </div>
-        </header>
-
+        <!-- Header loads here -->
+        <div id="header"></div>
 
         <main class="content">
             <p>
@@ -36,6 +21,6 @@
 
     </div>
 
+    <script src="load-header.js"></script>
 </body>
 </html>
-
