added notes page

--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
             <a href="mailto:nathan.cantafio@stat.ubc.ca">nathan.cantafio@stat.ubc.ca</a>
             <a href="https://github.com/cantafionathan" target="_blank">GitHub</a>
             <a href="cv.html">CV</a>
+            <a href="notes.html">Notes</a>
         </nav>
     </div>
 
