--- a/notes.html
+++ b/notes.html
@@ -11,9 +11,9 @@
     <div class="container">
 
         <!-- Shared Header -->
-        <div id="header"></div>
+        <a href="/index.html" class="back-link">← Back to home page</a>
 
-        <h2 class="page-title">Course Notes</h2>
+        <h2 class="page-title">Notes</h2>
 
         <p>
             Here are some of my typeset notes and exercise solutions.
