--- a/all-posts.html
+++ b/all-posts.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Blog Posts</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
-    <script src="load-header.js" defer></script>
-    <script src="load-sidebar.js" defer></script>
-    <script src="load-all-posts.js" defer></script>
+    <script src="/load-header.js" defer></script>
+    <script src="/load-sidebar.js" defer></script>
+    <script src="/load-all-posts.js" defer></script>
 </head>
 
 <body>
