--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathan Cantafio – Notes</title>
+	<title>Notes — Nathan Cantafio</title>
+	<meta name="description" content="Lecture notes and study materials on mathematics, statistics, and probability.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
