--- a/all-posts.html
+++ b/all-posts.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Blog Posts</title>
+    <title>Blog — Nathan Cantafio</title>
+    <meta name="description" content="Blog posts by Nathan Cantafio on probability, statistics, and mathematical intuition.">
     <link rel="stylesheet" href="/style.css">
 
     <script src="/load-header.js" defer></script>
