--- a/notes.html
+++ b/notes.html
@@ -6,6 +6,13 @@
 	<title>Notes — Nathan Cantafio</title>
 	<meta name="description" content="Lecture notes and study materials on mathematics, statistics, and probability.">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
 </head>
 <body>
 
