--- a/all-posts.html
+++ b/all-posts.html
@@ -10,6 +10,13 @@
     <script src="/load-header.js" defer></script>
     <script src="/load-sidebar.js" defer></script>
     <script src="/load-all-posts.js" defer></script>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
 </head>
 
 <body>
