--- a/all-posts.html
+++ b/all-posts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog — Nathan Cantafio</title>
-    <meta name="description" content="Blog posts by Nathan Cantafio on probability, statistics, and mathematical intuition.">
+    <meta name="description" content="Writing by Nathan Cantafio on probability, statistics, and mathematics.">
     <link rel="stylesheet" href="/style.css">
 
     <script src="/load-header.js" defer></script>
@@ -27,7 +27,7 @@
         <div id="sidebar"></div>
 
         <div class="main-content">
-            <h1>All Blog Posts</h1>
+            <h1>All Posts</h1>
             <ul id="all-posts-list"></ul>
         </div>
     </div>
