--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nathan Cantafio</title>
-    <meta name="description" content="Nathan Cantafio is a mathematics/statistics student writing about probability, statistics, and mathematical intuition.">
+    <meta name="description" content="Personal website of Nathan Cantafio.">
     <link rel="stylesheet" href="/style.css">
 
     <!-- Favicon -->
