--- a/sidebar.html
+++ b/sidebar.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="sidebar-section">
-        <h3>Blog Posts</h3>
+        <h3>Recent Posts</h3>
         <ul id="recent-posts"></ul>
         <a href="all-posts.html" class="see-all-posts-link">See all posts →</a>
     </div>
